# 50YearsOfRayTracing

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ProjectSetup.md  README.md  vcpkg.json
1968.Appel/: CMakeLists.txt  README.md
1968.Appel/code/: CMakeLists.txt  DemoScene.h  RayCastingRenderer.cpp  RayCastingRenderer.h  Scene.h  main.cpp
1979.Whitted/code/: main.cpp
1980.Whitted/: CMakeLists.txt  README.md
1980.Whitted/code/: BoxScene.h  CMakeLists.txt  DemoScene.h  Light.h  Material.h  Scene.h  TestScene.h  TestSceneBase.h  WhittedRayTracer.cpp  WhittedRayTracer.h  main.cpp
1984.Cook/: CMakeLists.txt  MyNotes.xmind  README.md
1984.Cook/code/: AreaLight.h  BilliardScene.h  BilliardSceneClone.h  BilliardSceneDemo.h  CMakeLists.txt  CornellBoxDemo.h  DistributedRayTracer.cpp  DistributedRayTracer.h  Material.h  MySceneWithLight.h  TableMaterial.h  main.cpp
1986.Kajiya/: CMakeLists.txt  MyNotes.xmind
1986.Kajiya/code/: AreaLight.h  BasicPathTracer.cpp  BasicPathTracer.h  CMakeLists.txt  CornellBoxDemo.h  CornellBoxScene.h  DemoScene.h  DiffuseMaterial.h  DirectLightingRenderer.cpp  DirectLightingRenderer.h  GGXMaterial.h  GlossyMaterial.h  KajiyaScene.h  LambertianMaterial.h  MaterialBase.h  MonteCarloPathTracer.cpp  MonteCarloPathTracer.h  MoriKnobScene.h  MyPathTracer.cpp  MyPathTracer.h  MySceneWithLight.h  MySceneWithLights.h  ParallelogramLight.h  PathTracer.cpp  PathTracer.h  PhongMaterial.h  Shading.h  SimpleMonteCarloApproach.cpp  SimpleMonteCarloApproach.h  SkyLight.h  main.cpp
1994.Lafortune/: README.md
1994.Veach.BDPT/: README.md
1995.Arvo/: CMakeLists.txt  README.md
1995.Arvo/code/: AnalyticDirectIntegrator.cpp  AnalyticDirectIntegrator.h  main.cpp
1996.Henrik/: README.md
1997.Vaech.MLT/: README.md
1997.Vaech.Metropolis/: README.md
2007.Walter/: README.md
2012.Georgiev.VCM/: README.md
2012.Jakob.MEMLT/: README.md
2013.PSSMLT/: README.md
2018.GPU/: README.md
2020.Zeltner.MNEE/: README.md
BlankWindow/: CMakeLists.txt  MyApp.cpp  MyApp.h  MyException.h  MyRenderer.cpp  MyRenderer.h  MyScene.h  main.cpp
MyFramework/: MyRenderer.h
RTKit1/: CMakeLists.txt
RTKit1/asset/: ImageRGBA.cpp  ImageRGBA.h  MaterialImporter.h  MyAssetManager.h  MyAssetObject.h  TriangleMesh.cpp  TriangleMesh.h
RTKit1/framework/: DirectRenderer.h  MyApp.cpp  MyApp.h  MyCamera.h  MyException.h  MyRenderer.cpp  MyRenderer.h  PinholeCamera.h  ThinLensCamera.h  TiledRenderer.h
RTKit1/geometry/: AABBox.h  ONB.h  Ray.h  Transform.h  Triangle.h
RTKit1/material/: CheckerTexture.h  MyMaterial.h  MyTexture.h  Texture2D.cpp  Texture2D.h
RTKit1/sampling/: JitteringSampling.h  UniformSampling.h
RTKit1/scene/: Box.cpp  Box.h  HitRecord.h  MeshInstance.cpp  MeshInstance.h  MyAnimator.h  MyScene.cpp  MyScene.h  MySceneObject.h  Parallelogram.cpp  Parallelogram.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
RTKit2/: CMakeLists.txt
RTKit2/asset/: ImageRGBA.cpp  ImageRGBA.h  MyAssetManager.cpp  MyAssetManager.h  MyAssetObject.h  WavefrontOBJ.cpp  WavefrontOBJ.h
RTKit2/framework/: DirectRenderer.h  MyApp.cpp  MyApp.h  MyCamera.h  MyException.h  MyRay.h  MyRenderer.cpp  MyRenderer.h  MySceneLoader.cpp  MySceneLoader.h  MySceneLoaderBase.h  MyTransform.h  PinholeCamera.h  ThinLensCamera.h  TiledRenderer.h
RTKit2/material/: CheckerTexture.h  LambertianMaterial.h  LightMaterial.h  MyMaterial.h  MyTexture.h  PhongMaterial.h  Texture2D.cpp  Texture2D.h
RTKit2/sampling/: JitteringSampling.h  UniformSampling.h
RTKit2/scene/: AnalyticalSphere.cpp  AnalyticalSphere.h  HitRecord.h  MyGeometry.cpp  MyGeometry.h  MyInstancedGeometry.h  MyScene.cpp  MyScene.h  MySceneObject.cpp  MySceneObject.h  QuadLight.cpp  QuadLight.h  TriangleMesh.cpp  TriangleMesh.h  TriangulatedSphere.cpp  TriangulatedSphere.h
RTKit2/utility/: AABBox.h  ONB.h  Phong.h
Shading/: README.md
common/: CMakeLists.txt  MyApp.cpp  MyRenderer.cpp  MyRenderer.h
common/asset/: Image.cpp  Image.h  ImageRGBA.cpp  ImageRGBA.h  MaterialImporter.h  Mesh.cpp  Mesh.h  MyAssetManager.h  MyAssetObject.h  TriangleMesh.cpp  TriangleMesh.h
common/framework/: DirectRenderer.h  MyApp.cpp  MyApp.h  MyCamera.h  MyException.h  MyRenderer.cpp  MyRenderer.h  ParallelSamplingRenderer.h  PinholeCamera.h  ThinLensCamera.h  TiledRenderer.h
common/geometry/: AABBox.h  BVH.h  ONB.h  Ray.h  Transform.h  Triangle.h
common/material/: CheckerTexture.h  MyMaterial.h  MyTexture.h  Texture2D.cpp  Texture2D.h
common/math/: AABBox.h  Ray.h  Transform.h
common/sampling/: JitteringSampling.h  UniformSampling.h
common/scene/: Box.cpp  Box.h  CornellBox.cpp  CornellBox.h  HitRecord.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  MyAnimator.h  MyCamera.h  MyScene.cpp  MyScene.h  MySceneObject.h  Parallelogram.cpp  Parallelogram.h  PinholeCamera.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  SpheresScene.cpp  SpheresScene.h
content/: cornell_box.scene  dragon.scene  minimal.scene  mori_knob.scene
content/cup/: cup.blend  cup.mtl
content/dragon/: dragon.mtl
content/machine/: machine.blend  machine.mtl
content/mori_knob/: background.mtl  equation.mtl  knob.mtl
content/statue/: statue.mtl
docs/: Timeline.xmind
docs/2018-HeitzGGX/: Heitz2018GGX-sampleGGXVNDF.h  Heitz2018GGX.bib
